ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-renegociacao-dividas
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "120"
    alb.ingress.kubernetes.io/target-group-attributes: slow_start.duration_seconds=120
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "10"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /renegociacao-dividas/v1/pedido/
            pathType: Prefix
            backend:
              service:
                name: pedido-service
                port:
                  number: 8081
          - path: /renegociacao-dividas/v1/pagamento/
            pathType: Prefix
            backend:
              service:
                name: pagamento-service
                port:
                  number: 8082
          - path: /renegociacao-dividas/v1/produto/
            pathType: Prefix
            backend:
              service:
                name: ms-producao
                port:
                  number: 8083
          - path: /pagamento
            pathType: Prefix
            backend:
              service:
                name: ms-pagamento-externo-service
                port:
                  number: 5001
